--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   </head>
   <body>
     <header>
-      <h1>Fonctionnement du segment mémoire <span>Pile</span></h1>
+      <h1>Fonctionnement du segment mémoire <span id="title-theme"></span></h1>
+
+      <nav>
+        <ul>
+          <li><a href="/">Stack</a></li>
+          <li><a href="/?theme=stack&setup=complex">Stack (complex)</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
