--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <ul>
           <li><a href="/">Stack</a></li>
           <li><a href="/?theme=stack&setup=complex">Stack (complex)</a></li>
+          <li><a href="/?theme=heap">Heap</a></li>
+          <li><a href="/?theme=heap&setup=reference">Heap (reference)</a></li>
         </ul>
       </nav>
     </header>
